Changes in @NEW@:
 o Performance improvements:
    * The use of copy.deepcopy() has been eliminated from the
      dependency code.  The new routines are up to 80% faster for
      operations like DependencySet.copy().

Changes in 1.0.4:
 o Performance improvements:
    * The speed of erasing troves with many dependencies has been
      significantly improved.
    * The join order of tables is forced through the use of
      STRAIGHT_JOIN in TroveStore.iterTroves() to work around some
      MySQL optimizer shortcomings.
    * An --analyze command line option has been added to the
      stand-alone server (server.py) to re-ANALYZE the SQL tables for
      MySQL and SQLite.  This can significantly improve repository
      performance in some cases.
    * The changes made to dependency string parsing were a loss in
      some cases due to inefficiency in PyArg_ParseTuple().
      Performance sensitive paths in misc.c now parse the arguments
      directly.

  o Bugfixes:
    * An Apache-based conary repository server no longer logs
      tracebacks in error_log when a client disconnects before all
      data is sent.
    * A bug that caused cross repository commits of changesets that involved
      a branched trove to fail in some cases has been fixed.
    * If an entitlement is used for repository access, it is now sent
      over HTTPS instead of HTTP by default.
    * The conary emerge command no longer attempts to write to the root
      user's conary log file.
    * conary showcs --all now shows not-by-default troves.
    * Previously, there was no way using showcs to display only the troves
      actually in a changeset - conary would by default access the repository
      to fill in any missing troves.  Now, you must specify the
      --recurse-repository option to cause conary to search the repository
      for missing troves.  The --trove-flags option will now display when a
      trove is missing in a changeset.